[package]
name = "cargo-dao"
description = "Crate slicing"
repository = "https://github.com/EthanYidong/dao"
documentation = "https://github.com/EthanYidong/dao"
homepage = "https://github.com/EthanYidong/dao"
version = "0.1.1"
authors = ["EthanYidong <ethanyidong@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "visit", "extra-traits"] }

wasm-pack = "0.9"

glob = "0.3"

thiserror = "1.0"
