[package]
name = "wasm-pack-example"
version = "0.1.1"
authors = ["EthanYidong <ethanyidong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "console"
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
